{
    "name": "DefaultXR",
    "maps": [
        {
            "name": "Default",
            "id": "7e66613d-a430-4815-a1ed-832c54f33e0c",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "80eb05d2-31f2-45ee-a508-7a9c861a7d58",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "6c99b418-e9fb-4c83-b0c2-7382365fb4fb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraMove",
                    "type": "Value",
                    "id": "0bb0853e-ba0e-4eb6-890f-84835f7e848d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraChange",
                    "type": "Button",
                    "id": "6517e256-b4d3-4ccf-8785-8aa180469be4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraLock",
                    "type": "Button",
                    "id": "97d50165-d211-4b46-8f67-76f80c6709cc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Explosion",
                    "type": "Button",
                    "id": "447bb542-0ae1-482b-92f1-1c50df35328e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraZoom",
                    "type": "Button",
                    "id": "2d2e0521-f5ea-41e3-8c75-487e04891945",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "6254d31b-a7a4-482a-b765-6ce20bc1ee61",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootingModeChange",
                    "type": "Button",
                    "id": "9720bc2d-c94b-4f3f-bcd1-4e201b54f9b9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScoreInput",
                    "type": "Button",
                    "id": "cc128195-1ad6-41e0-b1ff-1af2a2684c64",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "fe2fa2e0-4ee3-4400-b11e-84c780a15dd6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "c8d3dacc-c93e-47cc-871e-8e158ad100f6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "e30dfc80-e437-4eb6-9df6-8fbc6de88b96",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4ce23c07-287a-4614-bbcd-47ad58e69aca",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "80709953-e5f0-457d-9576-55f208dfe7f2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b81a0e9c-085d-4e67-be3f-2c18d558aa2d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a91ab56d-b222-432a-a0e5-8d9118495647",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0c41d84e-1615-4b20-8221-a13f78927e5c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a106efbe-9595-49d4-a54e-52d641d5250c",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "454f240e-7ad8-4172-a369-2110411dd1d2",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraChange",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af33c09c-d012-48f1-bb99-0f0ce23cb53e",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraLock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb71c046-2adf-4423-b0e5-36e5a865bc7c",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Explosion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b78aad17-15db-4828-a5f6-e12d05308d55",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ff79d62-2f88-4e58-89a9-14f11867a747",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootingModeChange",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24a7e523-b5cb-4aad-b121-1156b6553f6c",
                    "path": "<XRController>{LeftHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootingModeChange",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22ae2deb-42c4-47f6-ba84-9e273d6e7e76",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScoreInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44dc3136-8e6a-4af4-ae16-f362c3217c88",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdc93591-cf40-4c78-adbe-ee869234234e",
                    "path": "<XRController>{LeftHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d84cbee0-211a-4d5a-9fe1-56dd9de7bb08",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1eddf692-3c84-41f6-bcd3-2179551d6e95",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d67acfe-7c00-4651-afe7-a43983158a36",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "e6076f32-4d47-4620-ac75-96f1545442f7",
            "actions": [
                {
                    "name": "CloseInteractable",
                    "type": "Button",
                    "id": "45f272b2-78a6-4e68-95f6-017e60742d64",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CloseInventory",
                    "type": "Button",
                    "id": "509831de-91c7-4c90-83d4-3e987d854f18",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7a2b6447-a091-431c-9cc1-7f9bbc800d5b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseInteractable",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1dd7a43c-acdf-4571-b74a-3d10d52bece8",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseInteractable",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a583903a-da57-4c30-96f9-6cf3476ce47f",
                    "path": "<XRController>{LeftHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseInteractable",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fce17db-9d4e-4ec7-a4d3-5c25d0b1eaa4",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5aa0752-d2f2-48bf-806d-f50190112d4c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cac2589d-c49d-4f3f-b9e4-7bcac152d1ff",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "07948966-11f3-4470-a364-d3aa3794f311",
            "actions": [
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "c3e3c591-091b-411e-8dc1-dfa7c56ed429",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "73976aa7-6406-4206-af88-670e3cccac94",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}